[gd_scene load_steps=17 format=3 uid="uid://ch7t6b0c3tjwr"]

[ext_resource type="Script" path="res://Elements/function/enemies/enemy.gd" id="1_nn6r1"]
[ext_resource type="PackedScene" uid="uid://dcmdw7jaornc0" path="res://Elements/function/enemies/enemy_ragdoll.tscn" id="2_asn15"]
[ext_resource type="PackedScene" uid="uid://c34yykkhuoiy6" path="res://Art/blend/assets/enemies/spider.blend" id="2_llwai"]
[ext_resource type="PackedScene" uid="uid://cft1b4l0aljye" path="res://Elements/function/info.tscn" id="2_repm0"]
[ext_resource type="Material" uid="uid://cdh2wbqo2jjpj" path="res://Art/materials/skin.material" id="4_8u4a5"]
[ext_resource type="Texture2D" uid="uid://bwo3oarpasixk" path="res://Art/assets/assets/enemy_eyes-1.png" id="4_bcnof"]
[ext_resource type="Material" uid="uid://bi7cy033dy1o5" path="res://Art/materials/player_limbs.material" id="5_cfog0"]
[ext_resource type="AudioStream" uid="uid://c0j55qy04c13w" path="res://Art/audio/enemy/enemy_walk.mp3" id="8_6ie83"]
[ext_resource type="AudioStream" uid="uid://cim15rnhlywku" path="res://Art/audio/enemy/enemy_aggressive.wav" id="9_k2rvm"]
[ext_resource type="AudioStream" uid="uid://c32tohqs83knp" path="res://Art/audio/player/player_throw.wav" id="10_y34g2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_n31ol"]
size = Vector3(1.255, 1.185, 1.335)

[sub_resource type="SphereShape3D" id="SphereShape3D_jtg0j"]
radius = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ka4oa"]
size = Vector3(2, 1.59082, 2.45581)

[sub_resource type="Animation" id="Animation_g5rft"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:CAN_DEAL_DAMAGE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyAttack:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_74tlh"]
resource_name = "hit_timing"
length = 0.66
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:CAN_DEAL_DAMAGE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.45, 0.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyAttack:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.45, 0.65),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7yuj8"]
_data = {
"RESET": SubResource("Animation_g5rft"),
"hit_timing": SubResource("Animation_74tlh")
}

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_nn6r1")
corpse = ExtResource("2_asn15")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_n31ol")

[node name="spider" parent="." instance=ExtResource("2_llwai")]
transform = Transform3D(-3.36578e-08, 0, 0.77, 0, 0.77, 0, -0.77, 0, -3.36578e-08, 0, 0, 0)

[node name="Skeleton3D" parent="spider/Armature" index="0"]
bones/1/rotation = Quaternion(-0.120468, 0.871344, 0.386259, 0.27758)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(-0.851004, -0.00340441, 0.0132121, 0.524981)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(-0.135727, -5.38783e-08, 0.00188086, 0.990745)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(0.218255, -0.347949, -0.340695, 0.845708)
bones/5/rotation = Quaternion(0.160542, 0.00137759, -0.836209, 0.524385)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(0.0230141, -8.1261e-08, -0.13309, 0.990837)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.459967, -0.328176, -0.039048, 0.82414)
bones/8/rotation = Quaternion(-0.754688, -0.0525371, 0.295545, 0.583386)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(-0.128149, -1.3129e-08, 0.0689897, 0.989352)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(-0.459967, 0.328176, 0.039048, 0.82414)
bones/11/rotation = Quaternion(-0.754688, 0.0525371, -0.295545, 0.583386)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.128149, 1.3129e-08, -0.0689897, 0.989352)
bones/12/scale = Vector3(1, 1, 1)

[node name="Mesh" parent="spider/Armature/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("4_8u4a5")
surface_material_override/1 = ExtResource("5_cfog0")

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="spider/Armature/Skeleton3D" index="1"]
bone_name = "Torso"
bone_idx = 0

[node name="Face" type="Sprite3D" parent="spider/Armature/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(-4.37114e-08, 0.151261, -0.988494, -2.09371e-15, 0.988494, 0.151261, 1, 6.61182e-09, -4.32084e-08, -0.832612, 0.493762, -3.63947e-08)
pixel_size = 0.015
texture_filter = 0
texture = ExtResource("4_bcnof")

[node name="Info" parent="." instance=ExtResource("2_repm0")]
health = 6.0
max_health = 6.0
DamagePlayerOnPlayerCollision = false
PlayKillSound = true
PlayHurtSound = true
DisplayDamageParticles = true

[node name="Hitbox" parent="Info" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" parent="Info/Hitbox" index="0"]
shape = SubResource("BoxShape3D_n31ol")

[node name="SoftPush" type="Area3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="SoftPush"]
shape = SubResource("SphereShape3D_jtg0j")

[node name="HitArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.29541, 0.728)
shape = SubResource("BoxShape3D_ka4oa")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="RayCast3D" type="RayCast3D" parent="."]
top_level = true
target_position = Vector3(5, 0, 0)

[node name="HitTiming" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7yuj8")
}

[node name="EnemyWalk" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_6ie83")
volume_db = -20.0
pitch_scale = 3.3
bus = &"sfx"

[node name="EnemyAggressive" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_k2rvm")
attenuation_model = 1
volume_db = -10.0
pitch_scale = 0.8
autoplay = true
bus = &"sfx"

[node name="EnemyAttack" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("10_y34g2")
volume_db = 25.333
bus = &"sfx"

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="ChangeDirection" type="Timer" parent="."]

[connection signal="death" from="Info" to="." method="_on_info_death"]
[connection signal="takeDamage" from="Info" to="." method="_on_info_take_damage"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]

[editable path="spider"]
[editable path="Info"]
